# dhandler

./: .gitignore  Cargo.toml  README.md
config/: development.yaml  test.yaml
examples/: playground.rs
migration/src/: lib.rs  m20260313_072713_users.rs  m20260313_133713_google_auth_users.rs  m20260314_081957_knowledge_bases.rs  m20260316_113449_create_user_preference.rs  m20260317_102955_create_linked_in_jobs.rs  m20260317_115139_create_linked_in_cred.rs
src/: app.rs  lib.rs
src/controllers/: auth.rs  directory.rs  knowledge_base.rs  mod.rs  user_preference.rs
src/initializers/: di.rs
src/libs/: browser.rs  mod.rs
src/libs/agents/: mod.rs
src/libs/google/: auth.rs
src/libs/markdown/: mod.rs
src/libs/multipart_parser/: mod.rs
src/libs/research/: conductor.rs  dossier.rs  mod.rs  resolver.rs  synthesizer.rs  types.rs
src/libs/resume_generator/: analyzer.rs  composer.rs  extractor.rs  mod.rs  tailor.rs  template.rs  types.rs
src/models/: google_auth_users.rs  knowledge_bases.rs  linkedin_creds.rs  linkedin_seen_jobs.rs  mod.rs  user_preferences.rs  users.rs
src/models/_entities/: google_auth_users.rs  knowledge_bases.rs  linkedin_creds.rs  linkedin_seen_jobs.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  user_preferences.rs  users.rs
src/services/: auth.rs  encryption.rs  google_auth.rs  knowledge_base.rs  mod.rs  user.rs  user_preference.rs
src/services/directory/: apply.rs  currency.rs  linkedin.rs  mod.rs  money.rs  scrappy.js  service.rs
src/utils/: app.rs  llm_helper.rs  mod.rs  settings.rs  testing.rs
src/views/: auth.rs  directories.rs  knowledge_base.rs  mod.rs  user_preference.rs
tests/models/: knowledge_bases.rs  mod.rs
