[workspace]

[package]
name = "the-handler"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "the_handler-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.16" }

[dependencies]
loco-rs = { workspace = true  }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1" }
axum = { version = "0.8", features = ["multipart"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = { version = "1.11" }
migration = { path = "migration" }
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
validator = { version = "0.20" }
uuid = { version = "1.6", features = ["v4"] }
include_dir = { version = "0.7" }
reqwest = { version = "0.13.2", features = ["form", "json"] }
more-di = { version = "3.1.0", features = ["async"] }
dotenv = "0.15.0"
tokio-util = "0.7.18"
futures = "0.3.32"
bytes = "1.11.1"
pdfium-render = { version = "0.8.37", features = ["sync"] }
aes-gcm = "0.10.3"
base64 = "0.22.1"
chromiumoxide = { path = "../../Forks/chromiumoxide"}
anyhow = "1.0.102"
rig-core = "0.33.0"

[[bin]]
name = "the_handler-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }
